# dbt-tutorial-course

./: .gitignore  pyproject.toml  requirements.txt
answers/: dbt_project.yml  packages.yml  profiles.yml
answers/macros/: macro_get_brand_name.sql
answers/models/marts/: dim_orders.sql
answers/models/staging/: src_ecommerce.yml  stg_ecommerce__events.sql  stg_ecommerce__events_microbatch.sql  stg_ecommerce__order_items.yml
lessons/: .user.yml  dbt_project.yml  packages.yaml  profiles.yml
lessons/models/staging/: docs.md  src_ecommerce.yaml  stg_ecommerce__order_items.yaml  stg_ecommerce__orders.sql  stg_ecommerce__orders.yaml  stg_ecommerce__orders.yml  stg_ecommerce__products.sql  stg_ecommerce__products.yaml
source_database/parquets/: products.parquet
target_database/: thelook_final.db
