[project]
name = "dbt-tutorial-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
]
[tool.uv]
http-proxy = "http://192.168.20.10:9090"
https-proxy = "http://192.168.20.10:9090"
allow-insecure-host = ["pypi.org", "pypi.python.org", "files.pythonhosted.org"]
